PORT-4445: Add awards multiselect

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -126,5 +126,9 @@
     {
         "field": "category",
         "configEndpoint": "/categories"
+    },
+    {
+        "field": "awards",
+        "configEndpoint": "/awards"
     }
 ]
