PORT-4467: selected table changes

--- a/src/pages/avails/matched-combined-titles-table/MatchedCombinedTitlesTableMappings.json
+++ b/src/pages/avails/matched-combined-titles-table/MatchedCombinedTitlesTableMappings.json
@@ -56,7 +56,7 @@
         "colId": "episodic.seriesTitleName",
         "javaVariableName": "episodic.seriesTitleName",
         "field": "episodic.seriesTitleName",
-        "headerName": "Series",
+        "headerName": "Series Title",
         "dataType": "string",
         "readOnly": true,
         "enableSearch": false,
@@ -64,13 +64,26 @@
         "required": false
     },
     {
-        "colId": "episodic.seasonTitleName",
-        "javaVariableName": "episodic.seasonTitleName",
-        "field": "episodic.seasonTitleName",
-        "headerName": "Season",
-        "dataType": "string",
-        "readOnly": true,
-        "enableSearch": false,
+        "headerName": "Season Number",
+        "javaVariableName": "episodic.seasonNumber",
+        "field": "episodic.seasonNumber",
+        "dataType": "integer",
+        "searchDataType": "integer",
+        "queryParamName": "seasonNumber",
+        "readOnly": false,
+        "enableSearch": true,
+        "enableEdit": false,
+        "required": false
+    },
+    {
+        "headerName": "Episode Number",
+        "javaVariableName": "episodic.episodeNumber",
+        "field": "episodic.episodeNumber",
+        "dataType": "integer",
+        "searchDataType": "integer",
+        "queryParamName": "episodeNumber",
+        "readOnly": false,
+        "enableSearch": true,
         "enableEdit": false,
         "required": false
     },
