--- a/profile/configQA.json
+++ b/profile/configQA.json
@@ -40,7 +40,7 @@
     "keycloak": {
         "clientId": "portalapp-public",
         "realm": "Vubiquity",
-        "url": "https://auth.qa.vubiquity.com/auth"
+        "url": "https://identity.qa.vubiquity.com/auth"
     },
     "googleAnalytics": {
         "propertyId": "UA-165264495-2"
