PORT-4758-2: add SelectedAtCellRenderer

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -195,7 +195,8 @@
             "readOnly": false,
             "enableSearch": true,
             "enableEdit": true,
-            "required": false
+            "required": false,
+            "cellRenderer": "selectedAtCellRenderer"
         },
         {
             "javaVariableName": "territory",
