--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
         "@casl/react": "^0.8.1",
         "@material-ui/core": "^3.9.3",
         "@material-ui/icons": "^3.0.2",
-        "@vubiquity-nexus/portal-assets": "1.0.0",
+        "@vubiquity-nexus/portal-assets": "^1.1.0",
         "@vubiquity-nexus/portal-auth": "1.0.0",
         "@vubiquity-nexus/portal-styles": "1.0.0",
         "@vubiquity-nexus/portal-ui": "1.0.57",
