--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -28,7 +28,7 @@
         {
             "javaVariableName": "rightStatus",
             "searchDataType": "icon",
-            "displayName": "Withdrawn",
+            "displayName": "Withdrawn Status",
             "dataType": "icon",
             "readOnly": true,
             "enableSearch": true,
@@ -38,7 +38,7 @@
             "enableEdit": false,
             "required": false,
             "icon": "block",
-            "tooltip": "Withdrawn",
+            "tooltip": "Withdrawn Status",
             "valueToDisplay": "Withdrawn"
         },
         {
@@ -200,7 +200,7 @@
         },
         {
             "javaVariableName": "territory",
-            "displayName": "Withdrawn",
+            "displayName": "Withdrawn locales",
             "dataType": "territory.withdrawn",
             "searchDataType": "territoryType",
             "queryParamName": "withdrawn",
