PORT-5156: Services table updated

--- a/profile/servicesTableMappings.json
+++ b/profile/servicesTableMappings.json
@@ -77,5 +77,15 @@
         "enableSearch": true,
         "enableEdit": false,
         "required": true
+    },
+    {
+        "javaVariableName": "deliveryMethod",
+        "displayName": "Delivery Method",
+        "dataType": "select",
+        "queryParamName": "deliveryMethod",
+        "readOnly": false,
+        "enableSearch": true,
+        "enableEdit": true,
+        "required": true
     }
 ]
