PORT-5156: Code optimized

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -11,6 +11,21 @@
             "required": false
         },
         {
+            "javaVariableName": "updatedCatalogReceived",
+            "searchDataType": "icon",
+            "displayName": "Removed from Catalog",
+            "dataType": "icon",
+            "readOnly": true,
+            "enableSearch": true,
+            "queryParamName": "icon",
+            "queryParamKey": "updatedCatalogReceived",
+            "queryParamValue": true,
+            "enableEdit": false,
+            "required": false,
+            "icon": "warning",
+            "tooltip": "Removed from Catalog"
+        },
+        {
             "javaVariableName": "rightStatus",
             "searchDataType": "icon",
             "displayName": "Withdrawn",
@@ -1885,7 +1900,7 @@
         {
             "javaVariableName": "updatedCatalogReceived",
             "displayName": "Removed from Catalogue",
-            "dataType": "iconBoolean",
+            "dataType": "boolean",
             "searchDataType": "boolean",
             "queryParamName": "updatedCatalogReceived",
             "readOnly": true,
