--- a/packages/portal-common-components/package.json
+++ b/packages/portal-common-components/package.json
@@ -22,7 +22,8 @@
     "scripts": {
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
-        "build": "rimraf lib/ && webpack --progress --config webpack.config.ts",
+        "build-webpack": "rimraf lib/ && webpack --progress --config webpack.config.ts",
+        "build": "babel src -d lib & gulp pipe-scss",
         "test": "jest",
         "test:watch": "jest --watch",
         "prepublish": "npm run build"
@@ -65,7 +66,10 @@
         "typescript": "^4.4.4",
         "url-loader": "^4.1.1",
         "webpack": "^5.59.1",
-        "webpack-cli": "^4.9.1"
+        "webpack-cli": "^4.9.1",
+        "@babel/cli": "^7.0.0",
+        "gulp": "^4.0.2",
+        "gulp-rename": "^2.0.0"
     },
     "peerDependencies": {
         "react": ">= 16",
