PORT-5302: Default values for Created Timestamp added, eventTypeContext field created

--- a/src/pages/event-management/columnMappings.json
+++ b/src/pages/event-management/columnMappings.json
@@ -42,6 +42,16 @@
         "minWidth": 200
     },
     {
+        "colId": "eventTypeContext",
+        "javaVariableName": "eventTypeContext",
+        "field": "eventTypeContext",
+        "headerName": "Event Type Context",
+        "dataType": "string",
+        "searchDataType": "string",
+        "enableSearch": true,
+        "minWidth": 200
+    },
+    {
         "colId": "tenantId",
         "javaVariableName": "tenantId",
         "width": 100,
