PORT-5339: Logic to displaying data list with comma created

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -287,7 +287,8 @@
             "readOnly": false,
             "enableSearch": true,
             "enableEdit": true,
-            "required": true
+            "required": true,
+            "cellRenderer": "wordsCellRenderer"
         },
         {
             "javaVariableName": "availStart",
@@ -404,7 +405,8 @@
             "readOnly": false,
             "enableSearch": true,
             "enableEdit": true,
-            "required": false
+            "required": false,
+            "cellRenderer": "wordsCellRenderer"
         },
         {
             "javaVariableName": "titleStatus",
