PORT-5339: Logic to displaying data list with comma optimized

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -180,8 +180,7 @@
             "readOnly": false,
             "enableSearch": true,
             "enableEdit": true,
-            "required": false,
-            "cellRenderer": "selectedAtCellRenderer"
+            "required": false
         },
         {
             "javaVariableName": "territory",
@@ -287,8 +286,7 @@
             "readOnly": false,
             "enableSearch": true,
             "enableEdit": true,
-            "required": true,
-            "cellRenderer": "wordsCellRenderer"
+            "required": true
         },
         {
             "javaVariableName": "availStart",
@@ -405,8 +403,7 @@
             "readOnly": false,
             "enableSearch": true,
             "enableEdit": true,
-            "required": false,
-            "cellRenderer": "wordsCellRenderer"
+            "required": false
         },
         {
             "javaVariableName": "titleStatus",
