--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "start": "concurrently \"yarn start:root\" \"yarn start:packages\"",
         "prebuild": "lerna run build",
         "build": "webpack --config webpack/webpack.config.js --env.env=dev",
+        "build:local:prod": "webpack --config webpack/webpack.config.js --env.env=prod",
         "build:analyze-prod": "webpack --config webpack/webpack.config.js --env.env=prod --env.addon=bundleanalyze --env.addon=bundlevisualizer",
         "build:prod": "webpack --config webpack/webpack.config.js --env.env=prod && docker build . -t nexus/vehicle-ui",
         "test": "jest",
@@ -90,13 +91,16 @@
         "mini-css-extract-plugin": "^0.9.0",
         "moment": "^2.22.2",
         "popper.js": "^1.14.3",
+        "primereact": "^7.0.1",
+        "primeicons": "^5.0.0",
         "prop-types": "15.x",
         "react": "16.8.5",
         "react-beautiful-dnd": "^11.0.5",
         "react-block-ui": "^1.1.3",
         "react-datepicker": "^1.6.0",
         "react-datetime": "^2.16.3",
-        "react-dom": "16.8.5",
+        "react-dom": "17.0.1",
+        "react-transition-group": "^4.4.1",
         "react-dropzone": "^11.3.4",
         "react-fa": "5.x",
         "react-fontawesome": "^1.6.1",
