PORT-5371: Code optimized

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -426,7 +426,8 @@
             "readOnly": true,
             "enableSearch": true,
             "enableEdit": true,
-            "required": false
+            "required": false,
+            "nonMatchingValue": true
         },
         {
             "javaVariableName": "storeLanguage",
@@ -1800,7 +1801,8 @@
             "readOnlyInDetails": true,
             "enableSearch": true,
             "enableEdit": true,
-            "required": false
+            "required": false,
+            "nonMatchingValue": true
         },
         {
             "javaVariableName": "sourceRightId",
@@ -1812,7 +1814,8 @@
             "readOnlyInDetails": true,
             "enableSearch": true,
             "enableEdit": true,
-            "required": false
+            "required": false,
+            "nonMatchingValue": true
         },
         {
             "javaVariableName": "copyright",
