--- a/package.json
+++ b/package.json
@@ -175,10 +175,10 @@
         "lerna": "^3.22.1",
         "lint-staged": ">=10",
         "node-sass": "^4.11.0",
-        "nwb": "0.21.x",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "prettier": "2.0.5",
         "sass-loader": "^7.1.0",
+        "url-loader": "^4.1.1",
         "terser-webpack-plugin": "^2.3.5",
         "unorepo": "^0.1.0",
         "webpack": "^4.6.1",
