--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
         "@babel/polyfill": "^7.8.3",
         "@babel/preset-env": "^7.1.0",
         "@babel/preset-react": "^7.0.0",
+        "core-js": "^3.19.3",
         "@hot-loader/react-dom": "16.8.5",
         "@svgr/webpack": "^4.3.3",
         "babel-eslint": "^10.0.1",
@@ -177,6 +178,7 @@
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "prettier": "2.0.5",
+        "regenerator-runtime": "^0.13.9",
         "sass-loader": "^7.1.0",
         "url-loader": "^4.1.1",
         "terser-webpack-plugin": "^2.3.5",
