--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
         "react-datepicker": "^1.6.0",
         "react-datetime": "^2.16.3",
         "react-dom": "17.0.1",
+        "react-hook-form": "7.17.5",
         "react-transition-group": "^4.4.1",
         "react-dropzone": "^11.3.4",
         "react-fa": "5.x",
