bugfix/PORT-5374 - Enhancing the Search for the LTP Avails Repo

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -9,7 +9,9 @@
             "enableSearch": true,
             "queryParamName": "id",
             "enableEdit": true,
-            "required": false
+            "required": false,
+            "nonMatchingValue": true,
+            "readOnlyInDetails": true
         },
         {
             "javaVariableName": "rightStatus",
