bugfix/PORT-5373 - Code optimization | fixing comment

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -4,10 +4,10 @@
             "javaVariableName": "id",
             "displayName": "Right ID",
             "dataType": "string",
-            "searchDataType": "string",
+            "searchDataType": "stringToArray",
             "readOnly": true,
             "enableSearch": true,
-            "queryParamName": "id",
+            "queryParamName": "ids",
             "enableEdit": true,
             "required": false,
             "nonMatchingValue": true,
