feature/PORT-5403: Update packages and remove unused packages

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "packages/*"
     ],
     "scripts": {
-        "start:root": "webpack-dev-server --config webpack/webpack.config.js --env.env=dev --progress --color",
+        "start:root": "webpack-dev-server --config webpack/webpack.config.js --env env=dev --progress --color",
         "start:packages": "uno watch --ignore node_modules,dist,build,bld,lib",
         "prestart": "lerna run build",
         "start": "concurrently \"yarn start:root\" \"yarn start:packages\"",
@@ -31,12 +31,9 @@
         "@atlaskit/blanket": "^10.0.14",
         "@atlaskit/button": "^13.1.1",
         "@atlaskit/checkbox": "^9.0.9",
-        "@atlaskit/code": "^11.1.5",
-        "@atlaskit/css-reset": "^5.0.12",
         "@atlaskit/datetime-picker": "^10.4.0",
         "@atlaskit/dropdown-menu": "^8.1.1",
         "@atlaskit/dynamic-table": "^14.0.1",
-        "@atlaskit/field-base": "^13.0.6",
         "@atlaskit/flag": "^12.3.2",
         "@atlaskit/form": "8.1.4",
         "@atlaskit/icon": "^19.0.1",
@@ -46,10 +43,8 @@
         "@atlaskit/navigation": "^35.1.12",
         "@atlaskit/navigation-next": "^9.0.1",
         "@atlaskit/page": "^11.0.5",
-        "@atlaskit/page-header": "^9.0.14",
         "@atlaskit/pagination": "^12.0.9",
         "@atlaskit/popup": "^1.0.0",
-        "@atlaskit/portal": "^3.0.9",
         "@atlaskit/quick-search": "^7.6.6",
         "@atlaskit/radio": "^3.1.4",
         "@atlaskit/section-message": "^4.1.1",
@@ -72,34 +67,30 @@
         "@vubiquity-nexus/portal-ui": "1.0.57",
         "@vubiquity-nexus/portal-utils": "1.0.5",
         "abortcontroller-polyfill": "^1.4.0",
-        "ag-grid-community": "^25.1.0",
-        "ag-grid-enterprise": "^25.1.0",
-        "ag-grid-react": "^25.1.0",
+        "ag-grid-community": "^26.2.1",
+        "ag-grid-enterprise": "^26.2.1",
+        "ag-grid-react": "^26.2.0",
         "availity-reactstrap-validation": "^2.5.0",
         "bootstrap": "^5.1.3",
         "classnames": "^2.2.6",
         "connected-react-router": "6.8.0",
-        "eslint-plugin-import": "^2.22.0",
         "fast-json-patch": "^3.0.0-1",
         "file-saver": "^2.0.2",
-        "js-yaml": "^3.12.0",
+        "history": "^5.2.0",
         "jwt-decode": "^2.2.0",
         "keycloak-js": "^9.0.2",
         "lodash": "^4.17.15",
-        "material-dashboard-pro-react": "1.5.1",
-        "material-dashboard-react": "1.5.0",
         "mini-css-extract-plugin": "^0.9.0",
         "moment": "^2.22.2",
-        "popper.js": "^1.14.3",
         "primereact": "^7.1.0",
         "primeicons": "^5.0.0",
         "prop-types": "15.x",
-        "react": "16.8.5",
+        "react": "17.0.2",
         "react-beautiful-dnd": "^11.0.5",
         "react-block-ui": "^1.1.3",
         "react-datepicker": "^1.6.0",
         "react-datetime": "^2.16.3",
-        "react-dom": "17.0.1",
+        "react-dom": "17.0.2",
         "react-hook-form": "7.17.5",
         "react-transition-group": "^4.4.1",
         "react-dropzone": "^11.3.4",
@@ -111,27 +102,27 @@
         "react-global-configuration": "^1.3.0",
         "react-hot-loader": "^4.12.20",
         "react-intl": "^3.3.2",
-        "react-loaders": "^3.0.1",
         "react-multiselect-checkboxes": "^0.1.1",
         "react-redux": "^7.2.0",
-        "react-router-dom": "^4.3.1",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-select": "^5.2.2",
+        "react-scripts": "^5.0.0",
         "react-table": "^6.10.0",
         "react-tagsinput": "^3.19.0",
         "react-toggle-button": "^2.2.0",
         "react-uid": "^2.2.0",
-        "react-x-editable": "0.0.10-beta",
         "reactjs-popup": "^1.4.2",
         "reactstrap": "^8.2.0",
         "redux": "^4.0.0",
         "redux-devtools-extension": "^2.13.8",
-        "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.4",
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.0.5",
         "reselect": "^4.0.0",
+        "rotation": "^0.0.5",
         "styled-components": "^3.2.6",
-        "url-search-params-polyfill": "^7.0.0",
-        "uuid": "^3.3.2",
+        "stream-browserify": "^3.0.0",
         "whatwg-fetch": "^3.0.0"
     },
     "devDependencies": {
@@ -143,30 +134,25 @@
         "core-js": "^3.19.3",
         "@hot-loader/react-dom": "16.8.5",
         "@svgr/webpack": "^4.3.3",
-        "babel-eslint": "^10.0.1",
-        "babel-jest": "^25.1.0",
         "babel-loader": "^8.0.2",
-        "babel-plugin-react-html-attrs": "2.x",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "browser-sync": "^2.24.7",
-        "browser-sync-webpack-plugin": "^2.2.2",
         "clean-webpack-plugin": "^3.0.0",
         "concurrently": "^5.3.0",
         "copy-webpack-plugin": "^4.5.2",
+        "dotenv": "^14.2.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "enzyme-to-json": "^3.4.4",
         "eslint": "^5.7.0",
         "eslint-config-nexus-react-app": "1.0.10",
         "eslint-config-prettier": "^6.11.0",
-        "eslint-loader": "^2.1.1",
+        "eslint-loader": "^4.0.2",
         "eslint-nibble": "^5.1.0",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-react": "7.18.3",
-        "eslint-plugin-react-hooks": "^2.3.0",
-        "eslint-plugin-react-redux": "^2.3.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "file-loader": "^2.0.0",
-        "html-webpack-plugin": "^3.2.0",
+        "html-webpack-plugin": "^5.5.0",
         "husky": ">=4",
         "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^4.3.1",
@@ -176,19 +162,20 @@
         "jest-transform-stub": "^2.0.0",
         "lerna": "^3.22.1",
         "lint-staged": ">=10",
-        "node-sass": "^4.11.0",
-        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "sass": "^1.49.0",
+        "css-loader": "^6.5.1",
+        "optimize-css-assets-webpack-plugin": "^6.0.1",
         "prettier": "2.0.5",
         "regenerator-runtime": "^0.13.9",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^12.4.0",
+        "unorepo": "^0.1.0",
         "url-loader": "^4.1.1",
         "terser-webpack-plugin": "^2.3.5",
-        "unorepo": "^0.1.0",
-        "webpack": "^4.6.1",
-        "webpack-bundle-analyzer": "^3.7.0",
-        "webpack-cli": "^3.1.1",
-        "webpack-dev-server": "^3.1.9",
-        "webpack-merge": "^4.2.2",
+        "webpack": "^5.0.0",
+        "webpack-bundle-analyzer": "^4.5.0",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.7.3",
+        "webpack-merge": "^5.8.0",
         "webpack-visualizer-plugin": "^0.1.11"
     },
     "husky": {
