--- a/package.json
+++ b/package.json
@@ -26,152 +26,156 @@
         "lint": "eslint-nibble --cache src"
     },
     "dependencies": {
-        "@atlaskit/avatar": "^16.0.8",
-        "@atlaskit/badge": "^13.1.9",
-        "@atlaskit/blanket": "^10.0.14",
-        "@atlaskit/button": "^13.1.1",
-        "@atlaskit/checkbox": "^9.0.9",
-        "@atlaskit/datetime-picker": "^10.4.0",
-        "@atlaskit/dropdown-menu": "^8.1.1",
-        "@atlaskit/dynamic-table": "^14.0.1",
-        "@atlaskit/flag": "^12.3.2",
-        "@atlaskit/form": "8.1.4",
-        "@atlaskit/icon": "^19.0.1",
-        "@atlaskit/inline-edit": "^10.0.23",
-        "@atlaskit/lozenge": "^9.0.3",
-        "@atlaskit/modal-dialog": "^10.1.1",
-        "@atlaskit/navigation": "^35.1.12",
-        "@atlaskit/navigation-next": "^9.0.1",
-        "@atlaskit/page": "^11.0.5",
-        "@atlaskit/pagination": "^12.0.9",
-        "@atlaskit/popup": "^1.0.0",
-        "@atlaskit/quick-search": "^7.6.6",
-        "@atlaskit/radio": "^3.1.4",
-        "@atlaskit/section-message": "^4.1.1",
-        "@atlaskit/select": "^10.0.0",
-        "@atlaskit/spinner": "^12.1.6",
-        "@atlaskit/tag": "^9.0.10",
-        "@atlaskit/tag-group": "^9.0.5",
-        "@atlaskit/textarea": "^2.2.9",
-        "@atlaskit/textfield": "^5.0.5",
-        "@atlaskit/theme": "^9.1.6",
-        "@atlaskit/tooltip": "^15.0.14",
-        "@atlaskit/user-picker": "^4.0.18",
-        "@casl/ability": "^2.5.1",
-        "@casl/react": "^0.8.1",
-        "@material-ui/core": "^3.9.3",
-        "@material-ui/icons": "^3.0.2",
+        "@atlaskit/avatar": "^20.5.3",
+        "@atlaskit/badge": "^15.0.7",
+        "@atlaskit/blanket": "^12.2.6",
+        "@atlaskit/button": "^16.1.5",
+        "@atlaskit/checkbox": "^12.3.6",
+        "@atlaskit/datetime-picker": "^11.1.4",
+        "@atlaskit/dropdown-menu": "^11.0.2",
+        "@atlaskit/dynamic-table": "^14.4.4",
+        "@atlaskit/flag": "^14.5.1",
+        "@atlaskit/form": "^8.4.7",
+        "@atlaskit/icon": "^21.10.1",
+        "@atlaskit/inline-edit": "^12.1.6",
+        "@atlaskit/lozenge": "^11.1.5",
+        "@atlaskit/modal-dialog": "^12.2.1",
+        "@atlaskit/navigation": "^37.0.2",
+        "@atlaskit/navigation-next": "^9.0.16",
+        "@atlaskit/page": "^12.1.0",
+        "@atlaskit/pagination": "^14.1.2",
+        "@atlaskit/popup": "^1.3.1",
+        "@atlaskit/quick-search": "^8.0.9",
+        "@atlaskit/radio": "^5.3.5",
+        "@atlaskit/section-message": "^6.1.6",
+        "@atlaskit/select": "^15.2.6",
+        "@atlaskit/spinner": "^15.1.5",
+        "@atlaskit/tag": "^11.2.3",
+        "@atlaskit/tag-group": "^10.0.10",
+        "@atlaskit/textarea": "^4.2.5",
+        "@atlaskit/textfield": "^5.1.5",
+        "@atlaskit/theme": "^12.1.1",
+        "@atlaskit/tooltip": "^17.5.3",
+        "@atlaskit/user-picker": "^8.3.3",
+        "@casl/ability": "^5.4.3",
+        "@casl/react": "^2.3.0",
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
         "@vubiquity-nexus/portal-assets": "^1.1.0",
         "@vubiquity-nexus/portal-auth": "1.0.0",
         "@vubiquity-nexus/portal-styles": "1.0.0",
         "@vubiquity-nexus/portal-ui": "1.0.57",
         "@vubiquity-nexus/portal-utils": "1.0.5",
-        "abortcontroller-polyfill": "^1.4.0",
+        "abortcontroller-polyfill": "^1.7.3",
         "ag-grid-community": "^26.2.1",
         "ag-grid-enterprise": "^26.2.1",
         "ag-grid-react": "^26.2.0",
-        "availity-reactstrap-validation": "^2.5.0",
+        "availity-reactstrap-validation": "^2.7.1",
         "bootstrap": "^5.1.3",
-        "classnames": "^2.2.6",
-        "connected-react-router": "6.8.0",
-        "fast-json-patch": "^3.0.0-1",
+        "classnames": "^2.3.1",
+        "connected-react-router": "6.9.2",
+        "fast-json-patch": "^3.1.0",
         "file-saver": "^2.0.2",
         "history": "^5.2.0",
-        "jwt-decode": "^2.2.0",
-        "keycloak-js": "^9.0.2",
-        "lodash": "^4.17.15",
-        "mini-css-extract-plugin": "^0.9.0",
+        "jwt-decode": "^3.1.2",
+        "keycloak-js": "^16.1.1",
+        "lodash": "^4.17.21",
+        "mini-css-extract-plugin": "^2.5.3",
         "moment": "^2.22.2",
-        "primereact": "^7.1.0",
         "primeicons": "^5.0.0",
-        "prop-types": "15.x",
+        "primereact": "^7.2.0",
+        "prop-types": "15.8.1",
+        "querystring": "^0.2.1",
         "react": "17.0.2",
-        "react-beautiful-dnd": "^11.0.5",
+        "react-beautiful-dnd": "^13.1.0",
         "react-block-ui": "^1.1.3",
-        "react-datepicker": "^1.6.0",
-        "react-datetime": "^2.16.3",
+        "react-datepicker": "^4.6.0",
+        "react-datetime": "^3.1.1",
         "react-dom": "17.0.2",
-        "react-hook-form": "7.17.5",
-        "react-transition-group": "^4.4.1",
-        "react-dropzone": "^11.3.4",
+        "react-dropzone": "^11.5.1",
         "react-fa": "5.x",
         "react-fontawesome": "^1.6.1",
-        "react-forms-processor": "0.0.43",
-        "react-forms-processor-atlaskit": "0.0.43",
-        "react-ga": "^2.7.0",
+        "react-forms-processor": "0.0.44",
+        "react-forms-processor-atlaskit": "0.0.44",
+        "react-ga": "^3.3.0",
         "react-global-configuration": "^1.3.0",
+        "react-hook-form": "7.25.1",
         "react-hot-loader": "^4.12.20",
-        "react-intl": "^3.3.2",
+        "react-intl": "^5.24.4",
+        "react-intl-next": "^0.0.1-security",
         "react-multiselect-checkboxes": "^0.1.1",
-        "react-redux": "^7.2.0",
+        "react-redux": "^7.2.6",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-select": "^5.2.2",
         "react-scripts": "^5.0.0",
-        "react-table": "^6.10.0",
+        "react-select": "^5.2.2",
+        "react-table": "^7.7.0",
         "react-tagsinput": "^3.19.0",
         "react-toggle-button": "^2.2.0",
+        "react-transition-group": "^4.4.2",
         "react-uid": "^2.2.0",
-        "reactjs-popup": "^1.4.2",
-        "reactstrap": "^8.2.0",
-        "redux": "^4.0.0",
-        "redux-devtools-extension": "^2.13.8",
+        "reactjs-popup": "^2.0.5",
+        "reactstrap": "^9.0.1",
+        "redux": "^4.1.2",
+        "redux-devtools-extension": "^2.13.9",
         "redux-mock-store": "^1.5.4",
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.0.5",
-        "reselect": "^4.0.0",
+        "reselect": "^4.1.5",
         "rotation": "^0.0.5",
-        "styled-components": "^3.2.6",
         "stream-browserify": "^3.0.0",
-        "whatwg-fetch": "^3.0.0"
+        "styled-components": "^5.3.3",
+        "whatwg-fetch": "^3.6.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.1.0",
-        "@babel/plugin-proposal-class-properties": "^7.1.0",
+        "@babel/core": "^7.16.12",
+        "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/polyfill": "^7.8.3",
-        "@babel/preset-env": "^7.1.0",
-        "@babel/preset-react": "^7.0.0",
-        "core-js": "^3.19.3",
-        "@hot-loader/react-dom": "16.8.5",
-        "@svgr/webpack": "^4.3.3",
-        "babel-loader": "^8.0.2",
-        "clean-webpack-plugin": "^3.0.0",
-        "concurrently": "^5.3.0",
-        "copy-webpack-plugin": "^4.5.2",
-        "dotenv": "^14.2.0",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
+        "@hot-loader/react-dom": "17.0.2",
+        "@svgr/webpack": "^6.2.0",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.2.3",
+        "clean-webpack-plugin": "^4.0.0",
+        "concurrently": "^7.0.0",
+        "copy-webpack-plugin": "^10.2.1",
+        "core-js": "^3.20.3",
+        "css-loader": "^6.5.1",
+        "dotenv": "^14.3.2",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
-        "enzyme-to-json": "^3.4.4",
-        "eslint": "^5.7.0",
+        "enzyme-to-json": "^3.6.2",
+        "eslint": "^8.7.0",
         "eslint-config-nexus-react-app": "1.0.10",
-        "eslint-config-prettier": "^6.11.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-loader": "^4.0.2",
-        "eslint-nibble": "^5.1.0",
+        "eslint-nibble": "^8.0.1",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
-        "file-loader": "^2.0.0",
+        "eslint-webpack-plugin": "^3.1.1",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "husky": ">=4",
         "identity-obj-proxy": "^3.0.0",
-        "image-webpack-loader": "^4.3.1",
-        "jest": "^25.1.0",
-        "jest-environment-jsdom": "^25.1.0",
-        "jest-react-hooks-shallow": "^1.4.1",
+        "image-webpack-loader": "^8.1.0",
+        "jest": "^27.4.7",
+        "jest-environment-jsdom": "^27.4.6",
+        "jest-react-hooks-shallow": "^1.5.1",
         "jest-transform-stub": "^2.0.0",
-        "lerna": "^3.22.1",
-        "lint-staged": ">=10",
-        "sass": "^1.49.0",
-        "css-loader": "^6.5.1",
+        "lerna": "^4.0.0",
+        "lint-staged": ">=12.3.2",
         "optimize-css-assets-webpack-plugin": "^6.0.1",
-        "prettier": "2.0.5",
+        "prettier": "2.5.1",
         "regenerator-runtime": "^0.13.9",
+        "sass": "^1.49.0",
         "sass-loader": "^12.4.0",
+        "terser-webpack-plugin": "^5.3.0",
         "unorepo": "^0.1.0",
         "url-loader": "^4.1.1",
-        "terser-webpack-plugin": "^2.3.5",
-        "webpack": "^5.0.0",
+        "webpack": "^5.67.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.7.3",
