--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
         "eslint-webpack-plugin": "^3.1.1",
         "file-loader": "^2.0.0",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^7.0.4",
+        "husky": ">=4",
         "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^4.3.1",
         "jest": "^25.1.0",
