--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
         "eslint-webpack-plugin": "^3.1.1",
         "file-loader": "^2.0.0",
         "html-webpack-plugin": "^3.2.0",
-        "husky": ">=4",
+        "husky": "4.3.8",
         "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^4.3.1",
         "jest": "^25.1.0",
@@ -176,7 +176,7 @@
         "jest-react-hooks-shallow": "^1.4.1",
         "jest-transform-stub": "^2.0.0",
         "lerna": "^3.22.1",
-        "lint-staged": ">=10",
+        "lint-staged": "10.5.3",
         "sass": "^1.49.0",
         "sass-loader": "^7.1.0",
         "style-loader": "^2.0.0",
